# image-matching-challenge-2022

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  README.md  generate-depth-masks.ipynb  inference.ipynb  main.ipynb  pyproject.toml  training-loftr.ipynb
