[tool.poetry]
name = "riiid-test-answer-prediction"
version = "0.1.0"
description = ""
authors = ["aleixlopezpascual <cheals@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
jupyter = "^1.0.0"
scikit-learn = "^0.24.0"
tqdm = "^4.55.0"
lightgbm = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10"
flake8 = "^3.8"
black = "^20.8b1"
isort = "^5.6.4"
pydocstyle = "^5.1.1"
pre-commit = "^2.8.2"
mypy = "^0.790"
nbqa = "^0.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3