[tool.poetry]
name = "image-matching-challenge-2022"
version = "0.1.0"
description = ""
authors = ["aleixlopezpascual <aleixlopezpascual@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pytorch-lightning = "^1.6.3"
protobuf = "^3.20"
yacs = "*"
joblib = "*"
h5py = "*"
albumentations = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
isort = "*"
pydocstyle = "*"
pre-commit = "*"
mypy = "*"
nbqa = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
